fixed row and valign-wrapper collision issues

--- a/civiwiki/webapp/static/less/landing.less
+++ b/civiwiki/webapp/static/less/landing.less
@@ -32,6 +32,7 @@
     margin-top: -100px;
     padding-top: 100px;
     min-height: 700px;
+    height: 100vh;
 
     // Image with gradient
     background: url("../img/bg-landing-tree.svg"), #0E0038 linear-gradient(to bottom,
@@ -111,6 +112,8 @@
     }
 }
 .landing-content {
+
+
     .content-title {
         color: @muted-purple;
     }
@@ -128,6 +131,11 @@
         width: 200px;
         border-bottom: 3px solid @yellow;
     }
+    .why-civiwiki {
+        img {
+            padding: 50px 0 50px 0;
+        }
+    }
 
     .in-development {
         color: white;
@@ -140,11 +148,14 @@
         .text-highlight{
             color: @yellow;
         }
+        .ampersand {
+            line-height: 25px;
+        }
         .btn{
             overflow: hidden;
             background-color: transparent;
             border: solid 2px white;
-            font-size: 30px;
+            font-size: 20px;
             line-height: 50px;
             &:hover{
                 border: solid 2px @yellow;
